--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,76 +1,3 @@
-.filters{
-	background-color: #fff;
-	height: 70px;
-	width: 100%;
-	border: 1px solid #ddd;
-	border-radius: 4px;
-	position: relative;
-}
-.container .filters button{
-	font-size: 18px;
-	background-color: #FF5A5F;
-	color: #fff;
-	height: 48px;
-	width: 20%;
-	border: none;
-	border-radius: 4px;
-	position: absolute;
-	top: 15%;
-	right: 30px;
-}
-button:hover {
-    opacity: .9;
-}
-.filters .locations, .amenities{
-	height: 100%;
-	width: 25%;
-	float: left;
-	text-align: left;
-	line-height: .4;
-	padding-left: 3em;
-}
-.filters .locations{
-	border-right: 1px solid #DDDDDD;
-}
-.filters .locations h3, .amenities h3{
-	font-weight: 600;
-	margin-bottom: -8px;
-}
-.filters .locations h4, .amenities h4{
-	font-weight: 400;
-	font-size: 14px;
-}
-/* popover for the dropdown */
-.popover{
-	display: none;
-	width: 100%;
-	border: 1px solid #DDDDDD;
-	border-radius: 4px;
-	position: relative;
-	padding-bottom: 40px;
-	padding-left: 3em;
-	left: -49px;
-	top: 9px;
-	z-index: 1;
-}
-.popover li h2{
-	font-size: 16px;
-}
-ul.popover li{
-	list-style-type: none;
-	line-height: 1.2;
-	padding-left: 20px;
-	padding-top: 0;
-}
-.popover li ul{
-	padding-left: 0;
-	margin-top: 0;
-}
-
-.locations:hover .popover,
-.amenities:hover .popover{
-	display: block;
-}
 /* for places */
 .places{
 	text-align: center;
@@ -90,4 +17,17 @@ ul.popover li{
 .places article h2{
 	font-size: 30px;
 	text-align: center;
+}
+.places article .price_by_night{
+	color: #FF5A5F;
+	border: 4px solid #FF5A5F;
+	border-radius: 100%;
+	min-width: 60px;
+	height: 60px;
+	font-size: 30px;
+	text-align: center;
+	float: right;
+	position: relative;
+	top: -80px;
+	line-height: 60px;
 }
